--- a/index.html
+++ b/index.html
@@ -1,7 +1,14 @@
 <html>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portfolio</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
 <body>
-<h1>
-This website is under development.
-</h1>
+<h1 data-value="LEART">LEART</h1>
+
+<script src="script.js"></script>
+
 </body>
 </html>
